force-app/main/default/objects/AccountContactRelation/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Contact.FirstName +&quot; &quot;+ Contact.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>