force-app/main/default/objects/AccountContactRelation/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Contact email</description>
    <formula>Contact.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>